parser/testdata/like.test
select 'a' {{|NOT}} like {{ANY|SOME|ALL}} ('a', 'b', 'c')

--
ALTERNATION GROUP: ANY
--
QueryStatement [0-36] [select 'a'...'b', 'c')]
  Query [0-36] [select 'a'...'b', 'c')]
    Select [0-36] [select 'a'...'b', 'c')]
      SelectList [7-36] ['a'  like ANY ('a', 'b', 'c')]
        SelectColumn [7-36] ['a'  like ANY ('a', 'b', 'c')]
          LikeExpression(LIKE) [7-36] ['a'  like ANY ('a', 'b', 'c')]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [12-16] [like]
            AnySomeAllOp(ANY) [17-20] [ANY]
            InList [22-35] ['a', 'b', 'c']
              StringLiteral [22-25] ['a']
                StringLiteralComponent('a') [22-25] ['a']
              StringLiteral [27-30] ['b']
                StringLiteralComponent('b') [27-30] ['b']
              StringLiteral [32-35] ['c']
                StringLiteralComponent('c') [32-35] ['c']
--
SELECT
  'a' LIKE ANY('a', 'b', 'c')
--
ALTERNATION GROUP: SOME
--
QueryStatement [0-37] [select 'a'...'b', 'c')]
  Query [0-37] [select 'a'...'b', 'c')]
    Select [0-37] [select 'a'...'b', 'c')]
      SelectList [7-37] ['a'  like SOME ('a', 'b', 'c')]
        SelectColumn [7-37] ['a'  like SOME ('a', 'b', 'c')]
          LikeExpression(LIKE) [7-37] ['a'  like SOME ('a', 'b', 'c')]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [12-16] [like]
            AnySomeAllOp(SOME) [17-21] [SOME]
            InList [23-36] ['a', 'b', 'c']
              StringLiteral [23-26] ['a']
                StringLiteralComponent('a') [23-26] ['a']
              StringLiteral [28-31] ['b']
                StringLiteralComponent('b') [28-31] ['b']
              StringLiteral [33-36] ['c']
                StringLiteralComponent('c') [33-36] ['c']
--
SELECT
  'a' LIKE SOME('a', 'b', 'c')
--
ALTERNATION GROUP: ALL
--
QueryStatement [0-36] [select 'a'...'b', 'c')]
  Query [0-36] [select 'a'...'b', 'c')]
    Select [0-36] [select 'a'...'b', 'c')]
      SelectList [7-36] ['a'  like ALL ('a', 'b', 'c')]
        SelectColumn [7-36] ['a'  like ALL ('a', 'b', 'c')]
          LikeExpression(LIKE) [7-36] ['a'  like ALL ('a', 'b', 'c')]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [12-16] [like]
            AnySomeAllOp(ALL) [17-20] [ALL]
            InList [22-35] ['a', 'b', 'c']
              StringLiteral [22-25] ['a']
                StringLiteralComponent('a') [22-25] ['a']
              StringLiteral [27-30] ['b']
                StringLiteralComponent('b') [27-30] ['b']
              StringLiteral [32-35] ['c']
                StringLiteralComponent('c') [32-35] ['c']
--
SELECT
  'a' LIKE ALL('a', 'b', 'c')
--
ALTERNATION GROUP: NOT,ANY
--
QueryStatement [0-39] [select 'a'...'b', 'c')]
  Query [0-39] [select 'a'...'b', 'c')]
    Select [0-39] [select 'a'...'b', 'c')]
      SelectList [7-39] ['a' NOT like...'b', 'c')]
        SelectColumn [7-39] ['a' NOT like...'b', 'c')]
          LikeExpression(NOT LIKE) [7-39] ['a' NOT like...'b', 'c')]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [15-19] [like]
            AnySomeAllOp(ANY) [20-23] [ANY]
            InList [25-38] ['a', 'b', 'c']
              StringLiteral [25-28] ['a']
                StringLiteralComponent('a') [25-28] ['a']
              StringLiteral [30-33] ['b']
                StringLiteralComponent('b') [30-33] ['b']
              StringLiteral [35-38] ['c']
                StringLiteralComponent('c') [35-38] ['c']
--
SELECT
  'a' NOT LIKE ANY('a', 'b', 'c')
--
ALTERNATION GROUP: NOT,SOME
--
QueryStatement [0-40] [select 'a'...'b', 'c')]
  Query [0-40] [select 'a'...'b', 'c')]
    Select [0-40] [select 'a'...'b', 'c')]
      SelectList [7-40] ['a' NOT like...'b', 'c')]
        SelectColumn [7-40] ['a' NOT like...'b', 'c')]
          LikeExpression(NOT LIKE) [7-40] ['a' NOT like...'b', 'c')]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [15-19] [like]
            AnySomeAllOp(SOME) [20-24] [SOME]
            InList [26-39] ['a', 'b', 'c']
              StringLiteral [26-29] ['a']
                StringLiteralComponent('a') [26-29] ['a']
              StringLiteral [31-34] ['b']
                StringLiteralComponent('b') [31-34] ['b']
              StringLiteral [36-39] ['c']
                StringLiteralComponent('c') [36-39] ['c']
--
SELECT
  'a' NOT LIKE SOME('a', 'b', 'c')
--
ALTERNATION GROUP: NOT,ALL
--
QueryStatement [0-39] [select 'a'...'b', 'c')]
  Query [0-39] [select 'a'...'b', 'c')]
    Select [0-39] [select 'a'...'b', 'c')]
      SelectList [7-39] ['a' NOT like...'b', 'c')]
        SelectColumn [7-39] ['a' NOT like...'b', 'c')]
          LikeExpression(NOT LIKE) [7-39] ['a' NOT like...'b', 'c')]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [15-19] [like]
            AnySomeAllOp(ALL) [20-23] [ALL]
            InList [25-38] ['a', 'b', 'c']
              StringLiteral [25-28] ['a']
                StringLiteralComponent('a') [25-28] ['a']
              StringLiteral [30-33] ['b']
                StringLiteralComponent('b') [30-33] ['b']
              StringLiteral [35-38] ['c']
                StringLiteralComponent('c') [35-38] ['c']
--
SELECT
  'a' NOT LIKE ALL('a', 'b', 'c')
==

select 'a' not like all ('a', 'b', 'c')

--
QueryStatement [0-39] [select 'a'...'b', 'c')]
  Query [0-39] [select 'a'...'b', 'c')]
    Select [0-39] [select 'a'...'b', 'c')]
      SelectList [7-39] ['a' not like...'b', 'c')]
        SelectColumn [7-39] ['a' not like...'b', 'c')]
          LikeExpression(NOT LIKE) [7-39] ['a' not like...'b', 'c')]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [15-19] [like]
            AnySomeAllOp(ALL) [20-23] [all]
            InList [25-38] ['a', 'b', 'c']
              StringLiteral [25-28] ['a']
                StringLiteralComponent('a') [25-28] ['a']
              StringLiteral [30-33] ['b']
                StringLiteralComponent('b') [30-33] ['b']
              StringLiteral [35-38] ['c']
                StringLiteralComponent('c') [35-38] ['c']
--
SELECT
  'a' NOT LIKE ALL('a', 'b', 'c')
==

select 'a' like any ()
--
ERROR: Syntax error: Unexpected ")" [at 1:22]
select 'a' like any ()
                     ^
==

select lang as language, count(*)
from language
where language like any ('sv', 'rus')
--
QueryStatement [0-85] [select lang...sv', 'rus')]
  Query [0-85] [select lang...sv', 'rus')]
    Select [0-85] [select lang...sv', 'rus')]
      SelectList [7-33] [lang as language, count(*)]
        SelectColumn [7-23] [lang as language]
          PathExpression [7-11] [lang]
            Identifier(lang) [7-11] [lang]
          Alias [12-23] [as language]
            Identifier(language) [15-23] [language]
        SelectColumn [25-33] [count(*)]
          FunctionCall [25-33] [count(*)]
            PathExpression [25-30] [count]
              Identifier(count) [25-30] [count]
            Star(*) [31-32] [*]
      FromClause [34-47] [from language]
        TablePathExpression [39-47] [language]
          PathExpression [39-47] [language]
            Identifier(language) [39-47] [language]
      WhereClause [48-85] [where language...sv', 'rus')]
        LikeExpression(LIKE) [54-85] [language like...sv', 'rus')]
          PathExpression [54-62] [language]
            Identifier(language) [54-62] [language]
          Location [63-67] [like]
          AnySomeAllOp(ANY) [68-71] [any]
          InList [73-84] ['sv', 'rus']
            StringLiteral [73-77] ['sv']
              StringLiteralComponent('sv') [73-77] ['sv']
            StringLiteral [79-84] ['rus']
              StringLiteralComponent('rus') [79-84] ['rus']
--
SELECT
  lang AS language,
  count(*)
FROM
  language
WHERE
  language LIKE ANY('sv', 'rus')
==

select 'a' like all ('a', 'b', 'c') and 'b'
--
QueryStatement [0-43] [select 'a'...') and 'b']
  Query [0-43] [select 'a'...') and 'b']
    Select [0-43] [select 'a'...') and 'b']
      SelectList [7-43] ['a' like all...') and 'b']
        SelectColumn [7-43] ['a' like all...') and 'b']
          AndExpr [7-43] ['a' like all...') and 'b']
            LikeExpression(LIKE) [7-35] ['a' like all ('a', 'b', 'c')]
              StringLiteral [7-10] ['a']
                StringLiteralComponent('a') [7-10] ['a']
              Location [11-15] [like]
              AnySomeAllOp(ALL) [16-19] [all]
              InList [21-34] ['a', 'b', 'c']
                StringLiteral [21-24] ['a']
                  StringLiteralComponent('a') [21-24] ['a']
                StringLiteral [26-29] ['b']
                  StringLiteralComponent('b') [26-29] ['b']
                StringLiteral [31-34] ['c']
                  StringLiteralComponent('c') [31-34] ['c']
            StringLiteral [40-43] ['b']
              StringLiteralComponent('b') [40-43] ['b']
--
SELECT
  'a' LIKE ALL('a', 'b', 'c') AND 'b'
==

select 'a' LIKE ANY 'a', 'b', 'c'
--
ERROR: Syntax error: Unexpected string literal 'a' [at 1:21]
select 'a' LIKE ANY 'a', 'b', 'c'
                    ^
==

select 'a' like all not ('a', 'b', 'c')
--
ERROR: Syntax error: Unexpected keyword NOT [at 1:21]
select 'a' like all not ('a', 'b', 'c')
                    ^
==

SELECT * FROM table
WHERE id LIKE ANY
(SELECT idnumbers FROM Table2 WHERE location = 'EMEA');
--
QueryStatement [0-92] [SELECT * FROM...= 'EMEA')]
  Query [0-92] [SELECT * FROM...= 'EMEA')]
    Select [0-92] [SELECT * FROM...= 'EMEA')]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-19] [FROM table]
        TablePathExpression [14-19] [table]
          PathExpression [14-19] [table]
            Identifier(table) [14-19] [table]
      WhereClause [20-92] [WHERE id LIKE...= 'EMEA')]
        LikeExpression(LIKE) [26-92] [id LIKE ANY...= 'EMEA')]
          PathExpression [26-28] [id]
            Identifier(id) [26-28] [id]
          Location [29-33] [LIKE]
          AnySomeAllOp(ANY) [34-37] [ANY]
          Query [38-92] [(SELECT idnumbers...= 'EMEA')]
            Query [39-91] [SELECT idnumbers...on = 'EMEA']
              Select [39-91] [SELECT idnumbers...on = 'EMEA']
                SelectList [46-55] [idnumbers]
                  SelectColumn [46-55] [idnumbers]
                    PathExpression [46-55] [idnumbers]
                      Identifier(idnumbers) [46-55] [idnumbers]
                FromClause [56-67] [FROM Table2]
                  TablePathExpression [61-67] [Table2]
                    PathExpression [61-67] [Table2]
                      Identifier(Table2) [61-67] [Table2]
                WhereClause [68-91] [WHERE location = 'EMEA']
                  BinaryExpression(=) [74-91] [location = 'EMEA']
                    PathExpression [74-82] [location]
                      Identifier(location) [74-82] [location]
                    StringLiteral [85-91] ['EMEA']
                      StringLiteralComponent('EMEA') [85-91] ['EMEA']
--
SELECT
  *
FROM
  table
WHERE
  id LIKE ANY(
    SELECT
      idnumbers
    FROM
      Table2
    WHERE
      location = 'EMEA'
  )
==

select 'a' LIKE any ['a', 'b']
--
ERROR: Syntax error: Unexpected "[" [at 1:21]
select 'a' LIKE any ['a', 'b']
                    ^
==

select 'a' LIKE some UNNEST(['a', 'b'])
--
QueryStatement [0-39] [select 'a'...'a', 'b'])]
  Query [0-39] [select 'a'...'a', 'b'])]
    Select [0-39] [select 'a'...'a', 'b'])]
      SelectList [7-39] ['a' LIKE some...'a', 'b'])]
        SelectColumn [7-39] ['a' LIKE some...'a', 'b'])]
          LikeExpression(LIKE) [7-39] ['a' LIKE some...'a', 'b'])]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [11-15] [LIKE]
            AnySomeAllOp(SOME) [16-20] [some]
            UnnestExpression [21-39] [UNNEST(['a', 'b'])]
              ExpressionWithOptAlias [28-38] [['a', 'b']]
                ArrayConstructor [28-38] [['a', 'b']]
                  StringLiteral [29-32] ['a']
                    StringLiteralComponent('a') [29-32] ['a']
                  StringLiteral [34-37] ['b']
                    StringLiteralComponent('b') [34-37] ['b']
--
SELECT
  'a' LIKE SOME UNNEST(ARRAY['a', 'b'])
==

SELECT 'a' (LIKE ANY('a', 'b', 'c'))
--
ERROR: Syntax error: Function call cannot be applied to this expression. Function calls require a path, e.g. a.b.c() [at 1:12]
SELECT 'a' (LIKE ANY('a', 'b', 'c'))
           ^
==

SELECT ('a' LIKE ANY('a', 'b', 'c'))
--
QueryStatement [0-36] [SELECT ('a...'b', 'c'))]
  Query [0-36] [SELECT ('a...'b', 'c'))]
    Select [0-36] [SELECT ('a...'b', 'c'))]
      SelectList [7-36] [('a' LIKE ANY('a', 'b', 'c'))]
        SelectColumn [7-36] [('a' LIKE ANY('a', 'b', 'c'))]
          LikeExpression(LIKE) [8-35] ['a' LIKE ANY('a', 'b', 'c')]
            StringLiteral [8-11] ['a']
              StringLiteralComponent('a') [8-11] ['a']
            Location [12-16] [LIKE]
            AnySomeAllOp(ANY) [17-20] [ANY]
            InList [21-34] ['a', 'b', 'c']
              StringLiteral [21-24] ['a']
                StringLiteralComponent('a') [21-24] ['a']
              StringLiteral [26-29] ['b']
                StringLiteralComponent('b') [26-29] ['b']
              StringLiteral [31-34] ['c']
                StringLiteralComponent('c') [31-34] ['c']
--
SELECT
  ('a' LIKE ANY('a', 'b', 'c'))

==

select 'a' LIKE ANY ((SELECT x FROM t))
--
QueryStatement [0-39] [select 'a'...x FROM t))]
  Query [0-39] [select 'a'...x FROM t))]
    Select [0-39] [select 'a'...x FROM t))]
      SelectList [7-39] ['a' LIKE ANY...x FROM t))]
        SelectColumn [7-39] ['a' LIKE ANY...x FROM t))]
          LikeExpression(LIKE) [7-39] ['a' LIKE ANY...x FROM t))]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [11-15] [LIKE]
            AnySomeAllOp(ANY) [16-19] [ANY]
            InList [20-39] [((SELECT x FROM t))]
              ExpressionSubquery [20-39] [((SELECT x FROM t))]
                Query [22-37] [SELECT x FROM t]
                  Select [22-37] [SELECT x FROM t]
                    SelectList [29-30] [x]
                      SelectColumn [29-30] [x]
                        PathExpression [29-30] [x]
                          Identifier(x) [29-30] [x]
                    FromClause [31-37] [FROM t]
                      TablePathExpression [36-37] [t]
                        PathExpression [36-37] [t]
                          Identifier(t) [36-37] [t]
--
SELECT
  'a' LIKE ANY((
      SELECT
        x
      FROM
        t
    ))
==

select 'a' LIKE ANY ((SELECT x FROM t), 'x')
--
QueryStatement [0-44] [select 'a'...FROM t), 'x')]
  Query [0-44] [select 'a'...FROM t), 'x')]
    Select [0-44] [select 'a'...FROM t), 'x')]
      SelectList [7-44] ['a' LIKE ANY...FROM t), 'x')]
        SelectColumn [7-44] ['a' LIKE ANY...FROM t), 'x')]
          LikeExpression(LIKE) [7-44] ['a' LIKE ANY...FROM t), 'x')]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [11-15] [LIKE]
            AnySomeAllOp(ANY) [16-19] [ANY]
            InList [21-43] [(SELECT x FROM t), 'x']
              ExpressionSubquery [21-38] [(SELECT x FROM t)]
                Query [22-37] [SELECT x FROM t]
                  Select [22-37] [SELECT x FROM t]
                    SelectList [29-30] [x]
                      SelectColumn [29-30] [x]
                        PathExpression [29-30] [x]
                          Identifier(x) [29-30] [x]
                    FromClause [31-37] [FROM t]
                      TablePathExpression [36-37] [t]
                        PathExpression [36-37] [t]
                          Identifier(t) [36-37] [t]
              StringLiteral [40-43] ['x']
                StringLiteralComponent('x') [40-43] ['x']
--
SELECT
  'a' LIKE ANY((
      SELECT
        x
      FROM
        t
    ), 'x')
==

select 'a' LIKE ANY (ARRAY(SELECT x FROM t))

--
QueryStatement [0-44] [select 'a'...x FROM t))]
  Query [0-44] [select 'a'...x FROM t))]
    Select [0-44] [select 'a'...x FROM t))]
      SelectList [7-44] ['a' LIKE ANY...x FROM t))]
        SelectColumn [7-44] ['a' LIKE ANY...x FROM t))]
          LikeExpression(LIKE) [7-44] ['a' LIKE ANY...x FROM t))]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [11-15] [LIKE]
            AnySomeAllOp(ANY) [16-19] [ANY]
            InList [21-43] [ARRAY(SELECT x FROM t)]
              ExpressionSubquery(modifier=ARRAY) [21-43] [ARRAY(SELECT x FROM t)]
                Query [27-42] [SELECT x FROM t]
                  Select [27-42] [SELECT x FROM t]
                    SelectList [34-35] [x]
                      SelectColumn [34-35] [x]
                        PathExpression [34-35] [x]
                          Identifier(x) [34-35] [x]
                    FromClause [36-42] [FROM t]
                      TablePathExpression [41-42] [t]
                        PathExpression [41-42] [t]
                          Identifier(t) [41-42] [t]
--
SELECT
  'a' LIKE ANY(ARRAY(
      SELECT
        x
      FROM
        t
    ))
==

# Analyzer will catch inappropriate keywords after LIKE when parsed as a BinaryExpression(LIKE).
select 'a' LIKE NONE ('a', 'b')
--
QueryStatement [0-31] [select 'a'...('a', 'b')]
  Query [0-31] [select 'a'...('a', 'b')]
    Select [0-31] [select 'a'...('a', 'b')]
      SelectList [7-31] ['a' LIKE NONE ('a', 'b')]
        SelectColumn [7-31] ['a' LIKE NONE ('a', 'b')]
          BinaryExpression(LIKE) [7-31] ['a' LIKE NONE ('a', 'b')]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            FunctionCall [16-31] [NONE ('a', 'b')]
              PathExpression [16-20] [NONE]
                Identifier(NONE) [16-20] [NONE]
              StringLiteral [22-25] ['a']
                StringLiteralComponent('a') [22-25] ['a']
              StringLiteral [27-30] ['b']
                StringLiteralComponent('b') [27-30] ['b']
--
SELECT
  'a' LIKE NONE('a', 'b')
==

select '1' in ('1', '2') LIKE ANY ('2')
--
ERROR: Syntax error: Expression to the left of LIKE must be parenthesized [at 1:26]
select '1' in ('1', '2') LIKE ANY ('2')
                         ^
==

select NOT LIKE {{ANY|SOME|ALL}} (NULL, NULL);
--
ALTERNATION GROUP: ANY
--
ERROR: Syntax error: Unexpected keyword NOT [at 1:8]
select NOT LIKE ANY (NULL, NULL);
       ^
--
ALTERNATION GROUP: SOME
--
ERROR: Syntax error: Unexpected keyword NOT [at 1:8]
select NOT LIKE SOME (NULL, NULL);
       ^
--
ALTERNATION GROUP: ALL
--
ERROR: Syntax error: Unexpected keyword NOT [at 1:8]
select NOT LIKE ALL (NULL, NULL);
       ^

==

select 'a' LIKE {{ANY|SOME|ALL}} (select 'a')
--
ALTERNATION GROUP: ANY
--
QueryStatement [0-32] [select 'a'...select 'a')]
  Query [0-32] [select 'a'...select 'a')]
    Select [0-32] [select 'a'...select 'a')]
      SelectList [7-32] ['a' LIKE ANY (select 'a')]
        SelectColumn [7-32] ['a' LIKE ANY (select 'a')]
          LikeExpression(LIKE) [7-32] ['a' LIKE ANY (select 'a')]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [11-15] [LIKE]
            AnySomeAllOp(ANY) [16-19] [ANY]
            Query [20-32] [(select 'a')]
              Query [21-31] [select 'a']
                Select [21-31] [select 'a']
                  SelectList [28-31] ['a']
                    SelectColumn [28-31] ['a']
                      StringLiteral [28-31] ['a']
                        StringLiteralComponent('a') [28-31] ['a']

--
SELECT
  'a' LIKE ANY(
    SELECT
      'a'
  )
--
ALTERNATION GROUP: SOME
--
QueryStatement [0-33] [select 'a'...select 'a')]
  Query [0-33] [select 'a'...select 'a')]
    Select [0-33] [select 'a'...select 'a')]
      SelectList [7-33] ['a' LIKE SOME (select 'a')]
        SelectColumn [7-33] ['a' LIKE SOME (select 'a')]
          LikeExpression(LIKE) [7-33] ['a' LIKE SOME (select 'a')]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [11-15] [LIKE]
            AnySomeAllOp(SOME) [16-20] [SOME]
            Query [21-33] [(select 'a')]
              Query [22-32] [select 'a']
                Select [22-32] [select 'a']
                  SelectList [29-32] ['a']
                    SelectColumn [29-32] ['a']
                      StringLiteral [29-32] ['a']
                        StringLiteralComponent('a') [29-32] ['a']
--
SELECT
  'a' LIKE SOME(
    SELECT
      'a'
  )
--
ALTERNATION GROUP: ALL
--
QueryStatement [0-32] [select 'a'...select 'a')]
  Query [0-32] [select 'a'...select 'a')]
    Select [0-32] [select 'a'...select 'a')]
      SelectList [7-32] ['a' LIKE ALL (select 'a')]
        SelectColumn [7-32] ['a' LIKE ALL (select 'a')]
          LikeExpression(LIKE) [7-32] ['a' LIKE ALL (select 'a')]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [11-15] [LIKE]
            AnySomeAllOp(ALL) [16-19] [ALL]
            Query [20-32] [(select 'a')]
              Query [21-31] [select 'a']
                Select [21-31] [select 'a']
                  SelectList [28-31] ['a']
                    SelectColumn [28-31] ['a']
                      StringLiteral [28-31] ['a']
                        StringLiteralComponent('a') [28-31] ['a']
--
SELECT
  'a' LIKE ALL(
    SELECT
      'a'
  )

==


select 'a' LIKE {{ANY|SOME|ALL}} ((select 'a'))
--
ALTERNATION GROUP: ANY
--
QueryStatement [0-34] [select 'a'...select 'a'))]
  Query [0-34] [select 'a'...select 'a'))]
    Select [0-34] [select 'a'...select 'a'))]
      SelectList [7-34] ['a' LIKE ANY ((select 'a'))]
        SelectColumn [7-34] ['a' LIKE ANY ((select 'a'))]
          LikeExpression(LIKE) [7-34] ['a' LIKE ANY ((select 'a'))]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [11-15] [LIKE]
            AnySomeAllOp(ANY) [16-19] [ANY]
            InList [20-34] [((select 'a'))]
              ExpressionSubquery [20-34] [((select 'a'))]
                Query [22-32] [select 'a']
                  Select [22-32] [select 'a']
                    SelectList [29-32] ['a']
                      SelectColumn [29-32] ['a']
                        StringLiteral [29-32] ['a']
                          StringLiteralComponent('a') [29-32] ['a']

--
SELECT
  'a' LIKE ANY((
      SELECT
        'a'
    ))
--
ALTERNATION GROUP: SOME
--
QueryStatement [0-35] [select 'a'...select 'a'))]
  Query [0-35] [select 'a'...select 'a'))]
    Select [0-35] [select 'a'...select 'a'))]
      SelectList [7-35] ['a' LIKE SOME ((select 'a'))]
        SelectColumn [7-35] ['a' LIKE SOME ((select 'a'))]
          LikeExpression(LIKE) [7-35] ['a' LIKE SOME ((select 'a'))]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [11-15] [LIKE]
            AnySomeAllOp(SOME) [16-20] [SOME]
            InList [21-35] [((select 'a'))]
              ExpressionSubquery [21-35] [((select 'a'))]
                Query [23-33] [select 'a']
                  Select [23-33] [select 'a']
                    SelectList [30-33] ['a']
                      SelectColumn [30-33] ['a']
                        StringLiteral [30-33] ['a']
                          StringLiteralComponent('a') [30-33] ['a']
--
SELECT
  'a' LIKE SOME((
      SELECT
        'a'
    ))
--
ALTERNATION GROUP: ALL
--
QueryStatement [0-34] [select 'a'...select 'a'))]
  Query [0-34] [select 'a'...select 'a'))]
    Select [0-34] [select 'a'...select 'a'))]
      SelectList [7-34] ['a' LIKE ALL ((select 'a'))]
        SelectColumn [7-34] ['a' LIKE ALL ((select 'a'))]
          LikeExpression(LIKE) [7-34] ['a' LIKE ALL ((select 'a'))]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [11-15] [LIKE]
            AnySomeAllOp(ALL) [16-19] [ALL]
            InList [20-34] [((select 'a'))]
              ExpressionSubquery [20-34] [((select 'a'))]
                Query [22-32] [select 'a']
                  Select [22-32] [select 'a']
                    SelectList [29-32] ['a']
                      SelectColumn [29-32] ['a']
                        StringLiteral [29-32] ['a']
                          StringLiteralComponent('a') [29-32] ['a']
--
SELECT
  'a' LIKE ALL((
      SELECT
        'a'
    ))
==

select 'a' LIKE {{ANY|SOME|ALL}} ('a', (select 'a'))
--
ALTERNATION GROUP: ANY
--
QueryStatement [0-39] [select 'a'...select 'a'))]
  Query [0-39] [select 'a'...select 'a'))]
    Select [0-39] [select 'a'...select 'a'))]
      SelectList [7-39] ['a' LIKE ANY...select 'a'))]
        SelectColumn [7-39] ['a' LIKE ANY...select 'a'))]
          LikeExpression(LIKE) [7-39] ['a' LIKE ANY...select 'a'))]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [11-15] [LIKE]
            AnySomeAllOp(ANY) [16-19] [ANY]
            InList [21-38] ['a', (select 'a')]
              StringLiteral [21-24] ['a']
                StringLiteralComponent('a') [21-24] ['a']
              ExpressionSubquery [26-38] [(select 'a')]
                Query [27-37] [select 'a']
                  Select [27-37] [select 'a']
                    SelectList [34-37] ['a']
                      SelectColumn [34-37] ['a']
                        StringLiteral [34-37] ['a']
                          StringLiteralComponent('a') [34-37] ['a']
--
SELECT
  'a' LIKE ANY('a', (
      SELECT
        'a'
    ))
--
ALTERNATION GROUP: SOME
--
QueryStatement [0-40] [select 'a'...select 'a'))]
  Query [0-40] [select 'a'...select 'a'))]
    Select [0-40] [select 'a'...select 'a'))]
      SelectList [7-40] ['a' LIKE SOME...select 'a'))]
        SelectColumn [7-40] ['a' LIKE SOME...select 'a'))]
          LikeExpression(LIKE) [7-40] ['a' LIKE SOME...select 'a'))]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [11-15] [LIKE]
            AnySomeAllOp(SOME) [16-20] [SOME]
            InList [22-39] ['a', (select 'a')]
              StringLiteral [22-25] ['a']
                StringLiteralComponent('a') [22-25] ['a']
              ExpressionSubquery [27-39] [(select 'a')]
                Query [28-38] [select 'a']
                  Select [28-38] [select 'a']
                    SelectList [35-38] ['a']
                      SelectColumn [35-38] ['a']
                        StringLiteral [35-38] ['a']
                          StringLiteralComponent('a') [35-38] ['a']
--
SELECT
  'a' LIKE SOME('a', (
      SELECT
        'a'
    ))
--
ALTERNATION GROUP: ALL
--
QueryStatement [0-39] [select 'a'...select 'a'))]
  Query [0-39] [select 'a'...select 'a'))]
    Select [0-39] [select 'a'...select 'a'))]
      SelectList [7-39] ['a' LIKE ALL...select 'a'))]
        SelectColumn [7-39] ['a' LIKE ALL...select 'a'))]
          LikeExpression(LIKE) [7-39] ['a' LIKE ALL...select 'a'))]
            StringLiteral [7-10] ['a']
              StringLiteralComponent('a') [7-10] ['a']
            Location [11-15] [LIKE]
            AnySomeAllOp(ALL) [16-19] [ALL]
            InList [21-38] ['a', (select 'a')]
              StringLiteral [21-24] ['a']
                StringLiteralComponent('a') [21-24] ['a']
              ExpressionSubquery [26-38] [(select 'a')]
                Query [27-37] [select 'a']
                  Select [27-37] [select 'a']
                    SelectList [34-37] ['a']
                      SelectColumn [34-37] ['a']
                        StringLiteral [34-37] ['a']
                          StringLiteralComponent('a') [34-37] ['a']
--
SELECT
  'a' LIKE ALL('a', (
      SELECT
        'a'
    ))
